docs: fix documentation

--- a/_posts/2024-03-04-user-flow.md
+++ b/_posts/2024-03-04-user-flow.md
@@ -10,7 +10,7 @@ permalink: /user-flow/
 
 ## 1. 시작하기
 ### 회원가입 및 로그인
-1. [Resumait 홈페이지](https://resumait.com)에 접속
+1. [Resumait 홈페이지](https://resumait.xyz)에 접속
 2. 우측 상단의 '회원가입' 버튼 클릭
 3. 이메일 또는 소셜 계정으로 간편 가입
 4. 로그인하여 서비스 이용 시작
